[package]
name = "my-near-cli-dialoguer-strum-2"
version = "0.1.0"
authors = ["FroVolod <frol_off@meta.ua>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
dialoguer = "0.7"
strum = "0.20"
strum_macros = "0.20"
